[package]
name = "arena_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
chrono = "0.4"
log = "0.4.17"
env_logger = "0.9.1"
itertools = "0.10.5"
percentage = "0.1.0"
pad = "0.1.6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false
